Member show by Id Success in Swagger & Thunder
